--- a/src/style/main.css
+++ b/src/style/main.css
@@ -25,3 +25,253 @@ h3,
 p {
     margin: 0;
 }
+
+/* navbar */
+
+.navbar {
+    font-family: var(--ff-accent);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: var(--color-secundary-200);
+    background-color: var(--color-primary-100);
+    height: 8em;
+    letter-spacing: 0.25em;
+}
+
+.navbar .logo {
+    width: 8em;
+    height: auto;
+    padding: 1em;
+}
+
+.navbar .navbrand {
+    width: 25em;
+    display: flex;
+    margin: 0.5em;
+}
+
+.navbrand .logoSplash {
+    background-image: url("../assets/images/Splash.svg");
+    background-size: 100% 100%;
+}
+
+.navbar .text {
+    font-size: 1.5em;
+    margin-left: 0.5em;
+    margin-bottom: 0.75em;
+    align-self: flex-end;
+}
+
+.navbar .navLinks {
+    display: flex;
+    flex-direction: column;
+    margin-right: 1em;
+    margin-bottom: 1em;
+    margin-top: 1em;
+    padding: 1em;
+    font-size: 1em;
+    border-left: 1px solid var(--color-neutral-500);
+    text-decoration: none;
+}
+
+.navbar .navLinks .link {
+    text-decoration: none;
+}
+
+.navbar .navLinks .link:visited {
+    color: var(--color-secundary-300);
+    text-decoration: none;
+}
+
+.currentLink {
+    color: var(--color-secundary-100);
+    text-decoration: none;
+}
+
+.navbar img:hover {
+    animation: shake 0.82s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
+    transform: translate3d(0, 0, 0);
+    backface-visibility: hidden;
+    perspective: 1000px;
+}
+
+@keyframes shake {
+    10%,
+    90% {
+        transform: translate3d(-1px, 0, 0);
+    }
+
+    20%,
+    80% {
+        transform: translate3d(2px, 0, 0);
+    }
+
+    30%,
+    50%,
+    70% {
+        transform: translate3d(-4px, 0, 0);
+    }
+
+    40%,
+    60% {
+        transform: translate3d(4px, 0, 0);
+    }
+}
+
+.shadow {
+    -webkit-box-shadow: 0 10px 6px -6px var(--color-neutral-800);
+    -moz-box-shadow: 0 10px 6px -6px var(--color-neutral-800);
+    box-shadow: 0 10px 6px -6px var(--color-neutral-800);
+}
+
+/* login input */
+
+.loginInputWrapper {
+    width: 400px;
+    margin: 0 auto;
+    font-family: Lato;
+    font-size: 1.3em;
+    letter-spacing: 0.25em;
+    text-align: center;
+    font-family: var(--ff-accent);
+}
+
+.loginInput {
+    width: 400px;
+    height: 80px;
+    margin-top: 80px;
+    font-size: 1.8em;
+    background-color: transparent;
+    border: none;
+    border-top: 3px solid var(--color-primary-100);
+    border-bottom: 3px solid var(--color-primary-100);
+    outline: none;
+    color: var(--color-secundary-100);
+    padding-left: 10px;
+    text-align: center;
+    font-family: var(--ff-accent);
+    letter-spacing: 0.1em;
+}
+
+.loginInput:focus + label {
+    top: -130px;
+    font-size: 1.2em;
+    transition: all 0.3s;
+}
+
+label {
+    display: block;
+    position: relative;
+    left: 0px;
+    top: -70px;
+    font-size: 1.8em;
+    cursor: text;
+    color: var(--color-secundary-100);
+    transition: all 0.3s;
+}
+
+::placeholder {
+    color: var(--color-secundary-100);
+    opacity: 1;
+}
+
+/* login button */
+
+.btn {
+    position: relative;
+    letter-spacing: 0.25em;
+    margin: 0 auto;
+    padding: 1rem 2.5rem;
+    background: transparent;
+    outline: none;
+    border: none;
+    font-size: 28px;
+    color: var(--color-neutral-500);
+    font-family: var(--ff-accent);
+}
+
+.btn:hover {
+    cursor: pointer;
+}
+
+.btn::after,
+.btn::before {
+    content: "";
+    position: absolute;
+    height: 100%;
+    width: 85%;
+    transform: skewX(30deg);
+    transition: all 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+    z-index: -2;
+}
+
+.btn::before {
+    background-color: var(--color-primary-100);
+    top: -1rem;
+    left: -2.5rem;
+}
+
+.btn::after {
+    background-color: var(--color-secundary-100);
+    top: 1rem;
+    left: 4rem;
+}
+
+.btn:hover::before,
+.btn:hover::after {
+    top: 0;
+    transform: skewx(0deg);
+}
+
+.btn:hover::after {
+    left: -4.3rem;
+}
+
+.btn:hover::before {
+    left: 5.5rem;
+}
+
+/* translate image button */
+
+.imgBtn {
+    width: 5%;
+    height: 100%;
+    margin-left: 1em;
+    overflow: hidden;
+    transition-duration: 0.8s;
+    transition-property: transform;
+}
+
+.imgBtn:hover {
+    cursor: pointer;
+    transform: rotate(360deg);
+    -webkit-transform: rotate(360deg);
+}
+
+/* translate input */
+
+.translateInputWrapper {
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    max-width: 50%;
+    margin: 0 auto;
+}
+
+.translateInput {
+    width: 400px;
+    height: 80px;
+    margin-top: 80px;
+    font-size: 1.8em;
+    background-color: transparent;
+    border: none;
+    border-top: 3px solid var(--color-primary-100);
+    border-bottom: 3px solid var(--color-primary-100);
+    outline: none;
+    color: var(--color-secundary-100);
+    padding-left: 10px;
+    text-align: center;
+    font-family: var(--ff-accent);
+    letter-spacing: 0.1em;
+}
