--- a/src/style/main.css
+++ b/src/style/main.css
@@ -48,7 +48,7 @@ p {
 .navbar .navbrand {
     width: 25em;
     display: flex;
-    margin: 0.5em;
+    margin: 1em;
 }
 
 .navbrand .logoSplash {
@@ -66,13 +66,12 @@ p {
 .navbar .navLinks {
     display: flex;
     flex-direction: column;
-    margin-right: 1em;
-    margin-bottom: 1em;
-    margin-top: 1em;
+    margin: 1em;
     padding: 1em;
     font-size: 1em;
     border-left: 1px solid var(--color-neutral-500);
     text-decoration: none;
+    line-height: 1.75em;
 }
 
 .navbar .navLinks .link {
