--- a/src/style/main.css
+++ b/src/style/main.css
@@ -342,3 +342,53 @@ label {
     width: 32px;
     height: 32px;
 }
+
+/* modal */
+
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width:100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6);
+}
+
+.modalMain {
+  position: fixed;
+  background: var(--color-neutral-100);
+  width: 80%;
+  top:50%;
+  left:50%;
+  transform: translate(-50%,-50%);
+  border-radius: 10px;
+}
+
+.modalContent {
+  text-align: center;
+  color: var(--color-secundary-200) !important;
+  font-family: var(--ff-primary) !important;
+  letter-spacing: 0.25em !important;
+  font-size: 1.3em !important;
+}
+
+.modalBtn {
+  width: 16px;
+  height: 16px;
+}
+
+.modalBtn:hover {
+cursor: pointer;
+}
+
+.modalMessage {
+
+}
+
+.displayBlock {
+  display: block;
+}
+
+.displayNone {
+  display: none;
+}
