refactor: use spritesheet to load handsigns instead of individual images

--- a/src/style/main.css
+++ b/src/style/main.css
@@ -57,7 +57,7 @@ html {
 }
 
 .navbrand .logoSplash {
-    background-image: url("../assets/images/Splash.svg");
+    background-image: url("../assets/images/splash.svg");
     background-size: 100% 100%;
 }
 
