--- a/src/style/main.css
+++ b/src/style/main.css
@@ -2,13 +2,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato&display=swap");
 
 :root {
-    --color-primary-100: #FFD524;
-    --color-primary-200: #ECB602;
-    --color-secundary-100: #55185D;
+    --color-primary-100: #ffd524;
+    --color-primary-200: #ecb602;
+    --color-secundary-100: #55185d;
     --color-secundary-200: #290849;
-    --color-neutral-100: #FFFDF7;
-    --color-neutral-200:  #FFFAF0;
-    --color-neutral-600:  #C0C0C0;
+    --color-neutral-100: #fffdf7;
+    --color-neutral-200: #fffaf0;
+    --color-neutral-600: #c0c0c0;
     --ff-primary: "Lato", sans-serif;
     --ff-accent: "Oswald", sans-serif;
 }
@@ -28,7 +28,7 @@ p {
 }
 
 html {
-  background-color: var(--color-neutral-200);
+    background-color: var(--color-neutral-200);
 }
 
 /* navbar */
@@ -284,55 +284,55 @@ label {
 /* translation item card */
 
 .translationItemCard {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  margin: 2em;
-  padding: 2em;
-  justify-content: center;
-  align-items: center;
-  font-family: var(--ff-primary);
-  letter-spacing: 0.5em;
-  border-radius: 25px;
-  background-color: var(--color-neutral-100);
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    margin: 2em;
+    padding: 2em;
+    justify-content: center;
+    align-items: center;
+    font-family: var(--ff-primary);
+    letter-spacing: 0.5em;
+    border-radius: 25px;
+    background-color: var(--color-neutral-100);
 }
 
 .cardText {
-  margin-bottom: 1em;
-  color: var(--color-secundary-100);
+    margin-bottom: 1em;
+    color: var(--color-secundary-100);
 }
 
 .cardSigns {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
 }
 
 .shadowCard {
-  box-shadow: var(--color-neutral-600) 0px 7px 29px 0px;
+    box-shadow: var(--color-neutral-600) 0px 7px 29px 0px;
 }
 
 /* profile */
 
 .profileText {
-  font-family: var(--ff-primary);
-  letter-spacing: 0.25em;
-  text-align: center;
-  margin: 5em;
-  color: var(--color-secundary-200);
+    font-family: var(--ff-primary);
+    letter-spacing: 0.25em;
+    text-align: center;
+    margin: 5em;
+    color: var(--color-secundary-200);
 }
 
 .profileLogout {
-  font-family: var(--ff-primary);
-  height: 2em;
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-  letter-spacing: 0.1em;
-  text-align: right;
-  margin-top: 1em;
-  margin-right: 1em;
-  color: var(--color-secundary-200);
+    font-family: var(--ff-primary);
+    height: 2em;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    letter-spacing: 0.1em;
+    text-align: right;
+    margin-top: 1em;
+    margin-right: 1em;
+    color: var(--color-secundary-200);
 }
 
 .logoutImg {
@@ -345,51 +345,51 @@ label {
 }
 
 .logoutImg:hover {
-  cursor: pointer;
+    cursor: pointer;
 }
 
 /* modal */
 
 .modal {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width:100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.6);
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.6);
 }
 
 .modalMain {
-  position: fixed;
-  background: var(--color-neutral-100);
-  width: 80%;
-  top:50%;
-  left:50%;
-  transform: translate(-50%,-50%);
-  border-radius: 10px;
+    position: fixed;
+    background: var(--color-neutral-100);
+    width: 80%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 10px;
 }
 
 .modalContent {
-  text-align: center;
-  color: var(--color-secundary-200) !important;
-  font-family: var(--ff-primary) !important;
-  letter-spacing: 0.25em !important;
-  font-size: 1.3em !important;
+    text-align: center;
+    color: var(--color-secundary-200) !important;
+    font-family: var(--ff-primary) !important;
+    letter-spacing: 0.25em !important;
+    font-size: 1.3em !important;
 }
 
 .modalBtn {
-  width: 16px;
-  height: 16px;
+    width: 16px;
+    height: 16px;
 }
 
 .modalBtn:hover {
-cursor: pointer;
+    cursor: pointer;
 }
 
 .displayBlock {
-  display: block;
+    display: block;
 }
 
 .displayNone {
-  display: none;
+    display: none;
 }
